5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1650_652.log
== TEST (2019-04-27 21:26:52) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
print(d1)


-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:27:09) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
print(d1)


-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:28:06) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 1000
print(d1)
print(d2)


-- OUTPUT:
28
728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:28:25) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 10
print(d1)
print(d2)


-- OUTPUT:
28
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:29:31) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 1000
d3 =


-- ERROR:
File "XXXX", line 4
    d3 =
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:29:50) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 1000
print(d1)
print(d2)


-- OUTPUT:
28
728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:30:28) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 10
print(d1)
print(d2)


-- OUTPUT:
28
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:31:22) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 1000
print(d1)
print(d2)


-- OUTPUT:
28
728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:31:36) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 1
print(d1)
print(d2)


-- OUTPUT:
28
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:31:58) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 10
print(d1)
print(d2)


-- OUTPUT:
28
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:32:08) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 10 // 100
print(d1)
print(d2)


-- OUTPUT:
28
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:32:31) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = (n % 10) // 100
print(d1)
print(d2)


-- OUTPUT:
28
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:32:51) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = (n % 10) 
print(d1)
print(d2)


-- OUTPUT:
28
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:33:36) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 10 
d3 = n % 1
print(d1)
print(d2)


-- OUTPUT:
28
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:33:46) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100
d2 = n % 10 
d3 = n % 1
print(d1)
print(d2)
print(d3)


-- OUTPUT:
28
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 21:39:37) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100

if(n % d1 == 0):
	print("SIM")
else:
	print("NAO")



-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 21:40:03) 
-- CODE:
n = int(input("Digite um numero de 3 digitos: "))
d1 = n % 100

if(n % d1 == 0):
	print("SIM")
else:
	print("NAO")



-- EXECUTION TIME:
0.171922
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
